# d4e-alternate

./: Cargo.toml  ReadMe.md  build.rs  diagram.json  stm32f411.svd.svd  wokwi.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/domain/: kv_store.rs
