[package]
name = "d4e-alternate"
version = "0.1.0"
authors = ["potentialadventurer <143354532+potentialadventurer@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "1.0.0", features = ["defmt"] }
cortex-m-rtic = "1.1"
rtt-target = "0.6.2"
cortex-m-semihosting = "0.5.0"
heapless = "0.9.2"
panic-halt = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f411", "rtic1", "defmt", ]


[build-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
